--- a/reg-two-qy.html
+++ b/reg-two-qy.html
@@ -44,7 +44,7 @@
 					<div class="w-text">
 		 				<div class="imgload">
 						    <div class="imgview  adDWXBgIMG  margin-top-20">
-						        <span><img id="img" src="images/cross.png"></span>
+						        <span class="mui-icon mui-icon-camera"></span>
 						        <p>营业执照</p>
 						    </div>
 						    <div id="error" class="help-block text-center"></div>
@@ -61,7 +61,7 @@
 		 			<div class="w-text">
 		 				<div class="imgload">
 						    <div class="imgview  adDWXBgIMG  margin-top-20">
-						        <span><img id="imgx" src="images/cross.png"></span>
+						        <span class="mui-icon mui-icon-camera"></span>
 						        <p>身份证</p>
 						    </div>
 						    <div id="errorx" class="help-block text-center"></div>
