--- a/reg-two-qy.html
+++ b/reg-two-qy.html
@@ -16,7 +16,7 @@
 </head>
 <body style="background:#f2f2f2;">
 	<header class="mui-bar mui-bar-nav">
-		<h1 class="mui-title">企业注册</h1>
+		<h1 class="mui-title">演艺机构注册</h1>
 	</header>
 	<div class="mui-content reg_gz">
 		<form id='login-form' class="mui-input-group h-company">
