--- a/task-add2.html
+++ b/task-add2.html
@@ -46,7 +46,6 @@
 									<td><span class="mui-icon mui-icon-trash delete-btn"></span></td>
 								</tr>
 							</table>
-
 							<table width="100%" cellpadding="0" cellspacing="0" border="0" id="tab22">
 								<tr>
 									<td width="20%" align="right">角色：</td>
@@ -70,9 +69,7 @@
 								<tr>
 									<td><span class="mui-icon mui-icon-trash delete-btn"></span></td>
 								</tr>
-
 							</table>
-							
 							<table width="100%" cellpadding="0" cellspacing="0" border="0" id="tab33">
 								<tr>
 									<td width="20%" align="right">角色：</td>
@@ -95,10 +92,9 @@
 								<tr>
 									<td><span class="mui-icon mui-icon-trash delete-btn"></span></td>
 								</tr>
-
 							</table>
+							<div class="null">暂无选择</div>
 				 		</div>
-
 				 		<div class="inp1 zong">
 				 			<label>总备注：</label>
 				 			<textarea class="tea1 bz-2">公司年会活动，2名小提琴，1名大提琴，4名男伴舞，形象佳，表演经验丰富。</textarea>
