--- a/reg-one.html
+++ b/reg-one.html
@@ -16,7 +16,7 @@
 </head>
 <body style="background:#f2f2f2;">
 	<header class="mui-bar mui-bar-nav">
-		<h1 class="mui-title">企业注册</h1>
+		<h1 class="mui-title">注册</h1>
 	</header>
 	<div class="mui-content reg_gz">
 		<form id='login-form' class="mui-input-group">
@@ -25,7 +25,6 @@
 			<div class="mui-input-row"><em class="mui-icon mui-icon-locked"></em><input type="password" class="mui-input-clear mui-input company-psw" placeholder="请输入6-12位密码"></div>
 			<div class="mui-input-row"><em class="mui-icon mui-icon-locked"></em><input type="password" class="mui-input-clear mui-input company-cpsw" placeholder="请再次输入密码"></div>
 			<div class="mui-input-row"><em class="mui-icon mui-icon-email"></em><input type="text" class="mui-input-clear mui-input h-mail company-mail" placeholder="请输入邮箱地址"></div>
-			<div class="mui-input-row"><em class="mui-icon mui-icon-person"></em><span class="role"><input type="radio" name="reg-role">需求方<input type="radio" name="reg-role">企业<input type="radio" name="reg-role" flag="true">艺人<input type="radio" name="reg-role">经纪人</span></div>
 			<div class="agree">
 				<div class="xieyi"><input type="checkbox" id="company-chk" flag="false"> 同意《注册协议》<a href="#">已有账户？直接登录</a></div>
 				<div><a href="javascript:void(0);" class="reg-btn regcompany no">注 册</a></div>
