--- a/nav.html
+++ b/nav.html
@@ -12,14 +12,16 @@
 </head>
 <body style="background:#fff;">
 	<div class="sec_list">
+		<h2>演艺需求方</h2>
 		<ul class="list ">
 			<a href="reg-one.html">
-				<li><h4 class="d-title">我是需求方</h4>
+				<li><h4 class="d-title">买家</h4>
 					<p class="p1 color-666">快到碗里来</p>
 					<div class="img"><i class="img-box img" style="background-image: url(&quot;images/maijia.png&quot;); background-size: cover;"></i></div>
 				</li>
 			</a>
 		</ul>
+		<h2>演艺供应方</h2>
 		<ul class="list ">
 			<a href="reg-one.html">
 				<li><h4 class="d-title">艺人</h4>
