--- a/nav.html
+++ b/nav.html
@@ -15,47 +15,21 @@
 		<h2>演艺需求方</h2>
 		<ul class="list ">
 			<a href="reg-one.html">
-				<li><h4 class="d-title">买家</h4>
-					<p class="p1 color-666">快到碗里来</p>
-					<div class="img"><i class="img-box img" style="background-image: url(&quot;images/maijia.png&quot;); background-size: cover;"></i></div>
-				</li>
+				<li><div class="img"><i class="img-box img" style="background-image: url(&quot;images/maijia.png&quot;); background-size: cover;"></i><h4 class="d-title">买家</h4></div></li>
 			</a>
 		</ul>
 		<h2>演艺供应方</h2>
 		<ul class="list ">
 			<a href="reg-one.html">
-				<li><h4 class="d-title">艺人</h4>
-					<p class="p1 color-666">不低头皇冠会掉</p>
-					<div class="img"><i class="img-box img" style="background-image: url(&quot;images/yiren.png&quot;); background-size: cover;"></i></div>
-				</li>
+				<li><div class="img"><i class="img-box img" style="background-image: url(&quot;images/yiren.png&quot;); background-size: cover;"></i><h4 class="d-title">艺人</h4></div></li>
 			</a>
 			<a href="reg-one.html">
-				<li><h4 class="d-title">演艺机构</h4>
-					<p class="p1 color-666">寻找有才华的你</p>
-					<div class="img"><i class="img-box img" style="background-image: url(&quot;images/company.png&quot;); background-size: cover;"></i></div>
-				</li>
+				<li><div class="img"><i class="img-box img" style="background-image: url(&quot;images/company.png&quot;); background-size: cover;"></i></div><h4 class="d-title">演艺机构</h4></li>
 			</a>
 			<a href="reg-one.html">
-				<li><h4 class="d-title">经纪人</h4>
-					<p class="p1 color-666">你的坚强后盾</p>
-					<div class="img"><i class="img-box img" style="background-image: url(&quot;images/jingjiren.png&quot;); background-size: cover;"></i></div>
-				</li>
+				<li><div class="img"><i class="img-box img" style="background-image: url(&quot;images/jingjiren.png&quot;); background-size: cover;"></i><h4 class="d-title">经纪人</h4></div></li>
 			</a>
 		</ul>
 	</div>
-	<div class="mui-slider artist-banner">
-		<div class="mui-slider-group mui-slider-loop">
-			<div class="mui-slider-item">
-				<a href="#">
-					<img src="images/artist-banner.jpg" />
-				</a>
-			</div>
-		</div>
-	</div>
-	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script> 
-	<script type="text/javascript" src="js/common.js"></script>
-	<script type="text/javascript">
-		// remix.personNav();
-	</script>
 </body>
 </html>
