--- a/nav.html
+++ b/nav.html
@@ -13,7 +13,7 @@
 <body style="background:#fff;">
 	<div class="sec_list">
 		<h2>演艺需求方</h2>
-		<ul class="list ">
+		<ul class="list one">
 			<a href="reg-one.html">
 				<li><div class="img"><i class="img-box img" style="background-image: url(&quot;images/maijia.png&quot;); background-size: cover;"></i><h4 class="d-title">买家</h4></div></li>
 			</a>
