--- a/artist-add.html
+++ b/artist-add.html
@@ -22,14 +22,14 @@
 					<div class="cnt swiper-slide swiper-slide-visible swiper-slide-active artist">
 				 		<ul class="list">
 				 			<li><div class="inp1"><label>艺人名称：</label><input type="text" class="artname cname"> *</div></li>
-				 			<li><div class="inp1"><label>性别：</label><div class="in"><button id='showUserPicker' class="mui-btn mui-btn-block csex" type='button'>请选择性别...</button></div> *</div></li>
+				 			<li><div class="inp1"><label>性别：</label><div class="in"><button id='showUserPicker' class="mui-btn mui-btn-block csex btn-black" type='button'>请选择性别...</button></div> *</div></li>
 				 			<li><div class="inp1"><label>出生年月：</label> <div class="in relative"><!-- <input type="date" class="time-x">
 						 			<input type="text" class="activeTime"> -->
 						 			<span class="date-rl"></span>
-						 			<button id='demo1' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block cbrith">2015-01-01</button>
+						 			<button id='demo1' data-options='{"type":"date","beginYear":1970,"endYear":2020}' class="btn mui-btn mui-btn-block cbrith btn-black">2015-01-01</button>
 						 		</div> 
 			 				*</div></li>
-				 			<li><div class="inp1"><label>所在地：</label> <div class="in"><button id='showCityPicker' class="mui-btn mui-btn-block caddress" type='button'>上海市</button> </div></div></li>
+				 			<li><div class="inp1"><label>所在地：</label> <div class="in"><button id='showCityPicker' class="mui-btn mui-btn-block caddress btn-black" type='button'>上海市</button> </div></div></li>
 				 			<li><div class="inp1"><label>手机：</label><input type="text" class="artname ctel"> *</div></li>
 				 			<li><div class="inp1"><label>Email：</label><input type="text" class="artname cmail"> *</div></li>
 				 			<li><div class="inp1"><label>身高：</label><input type="text" class="artname cheight"> cm</div></li>
