--- a/reg-two-jjr.html
+++ b/reg-two-jjr.html
@@ -26,7 +26,7 @@
 				<div class="w-text">
 	 				<div class="imgload">
 					    <div class="imgview  adDWXBgIMG  margin-top-20">
-					        <span class="mui-icon mui-icon-camera"></span>
+			    			<span><img id="img" src="images/camera.png"></span>
 					    </div>
 					    <div id="error" class="help-block text-center"></div>
 					    <div class="btn-box margin-top-20">
