--- a/reg-two-qy.html
+++ b/reg-two-qy.html
@@ -44,7 +44,7 @@
 					<div class="w-text">
 		 				<div class="imgload">
 						    <div class="imgview  adDWXBgIMG  margin-top-20">
-						        <span class="mui-icon mui-icon-camera"></span>
+			    				<span><img id="img" src="images/camera.png"></span>
 						        <p>营业执照</p>
 						    </div>
 						    <div id="error" class="help-block text-center"></div>
@@ -61,7 +61,7 @@
 		 			<div class="w-text">
 		 				<div class="imgload">
 						    <div class="imgview  adDWXBgIMG  margin-top-20">
-						        <span class="mui-icon mui-icon-camera"></span>
+			    				<span><img id="imgx" src="images/camera.png"></span>
 						        <p>身份证</p>
 						    </div>
 						    <div id="errorx" class="help-block text-center"></div>
@@ -103,8 +103,8 @@
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script> 
 	<script src="js/roleList.js"></script>
 	<script src="js/upload.js"></script>
-	<script type="text/javascript" src="js/common.js"></script>
 	<script src="js/unload_sc.js"></script>
+	<script type="text/javascript" src="js/common.js"></script>
 	<script>
 	  	sc("#testmm","#img","#error");
 	  	sc("#testme","#imgx","#errorx");
