--- a/upload.html
+++ b/upload.html
@@ -19,7 +19,7 @@
 		<div class="w-text">
 			<div class="imgload">
 		    <div class="imgview  adDWXBgIMG  margin-top-20">
-		        <span class="mui-icon mui-icon-camera"></span>
+			    <span><img id="img" src="images/camera.png"></span>
 		    </div>
 		    <div id="error" class="help-block text-center"></div>
 		    <div class="btn-box margin-top-20">
@@ -54,5 +54,11 @@
 			<span class="mui-tab-label">我的</span>
 		</a>
 	</nav>
+	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script> 
+	<script src="js/upload.js"></script>
+	<script src="js/unload_sc.js"></script>
+	<script>
+	  	sc("#testmm","#img","#error");
+	</script>
 </body>
 </html>
